web/assets/3-way-1-day.less
div#task-list {
    padding: 2px 0 .5ex .5ex;
    overflow: hidden;

    div.event {
        margin-bottom: .5ex;
        line-height: 20px;

        span.icon {
            display: inline-block;
            width: 20px;
            height: 20px;
            background-position: center;
            background-size: contain;
            vertical-align: bottom;
            margin-right: .25ex;

            &.task {
                background-image: url('/web/assets/task.png');
            }
            &.event {
                background-image: url('/web/assets/event.png');
            }
        }

        span.done-event {
            text-decoration: line-through;
        }
    }

    span.start-time {
        font-family: 'WenQuanYi Micro Hei Mono';
        margin-right: .5ex;
        font-weight: 900;
        font-size: 14px;
        letter-spacing: -.15ex;

        &.urgent {
            background-color: #f00;
            color: #fff;
            padding: 2px .5ex;
        }

        +span {
            text-overflow: ellipsis;
        }
    }
}


div#calendar {
    padding-top: 5px;
    border-top: 1px solid #000;

    table {
        width: 100%;
        margin: 0;
        padding: 0;
        border-spacing: 0 !important;

        thead tr td {
            width: 12%;
            text-align: center;
            font-family: 'WenQuanYi Micro Hei';
            font-size: 24px;
            font-weight: 900;

            &:first-child {
                width: 16%;
                font-size: 12px;
            }

            &:last-child {
                color:red;
            }
        }

        tbody tr {
            &.this-week {
                td:first-child {
                    background-color: #ccc;
                }

                font-weight: 900;
            }

            td {
                text-align: center;
                font-size: 16px;
                padding: 7px 0;
                font-family: 'WenQuanYi Micro Hei Mono';

                &:first-child {
                    border-right: 1px solid #888;
                    font-size: 12px;
                    font-weight: 900;
                }
    
                &:last-child {
                    color: red;
                }

                &.before-today, &.other-month {
                    color: #888;

                    /*&.red {
                        color:#c00 !important;
                    }*/
                }

                &.today {
                    border: 2px solid #555;
                    border-radius: 0 !important;
                }

                &.has-events {
                    border-radius: 15px;
                    background-color: #aaa;

                    &.before-today, &.other-month {
                        background-color: #ccc;
                        color: #555 !important;
                    }

                    &.red {
                        background-color: #f44 !important;
                        color: #fff !important;

                        &.before-today, &.other-month {
                            color: #ddd !important;
                        }
                    }
                }
            }
        }
    }
}


div#events-today {

    border-right: 2px solid #000;

    div.today-hours {

        &:not(:first-child) {
            border-top: 1px solid #666;
        }

        &>span {
            padding-left: 2px;
            font-size: 12px;
            font-weight: 900;
            font-family: 'WenQuanYi Micro Hei';
        }
    }
    

    div.event {

        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        border: 1px solid #444;

        background-color: #eee;
        min-height: 32px;
        padding: 2px;

        &:nth-child(odd) {
            background-color: #ccc !important;
        }

        div.title, div.desc {
            overflow: hidden;
            text-overflow: clip;
            white-space: nowrap;
        }

        div.time {
            letter-spacing: -1px;
            font-size: 14px;
            font-weight: 900;
            font-family: 'WenQuanYi Micro Hei Mono';
            width: 100%;
            padding: 0 2px;
            margin-left: -2px;
            border-bottom: 1px solid #000;
        }

        div.title {
            letter-spacing: -1px;
            font-size: 14px;
        }

        div.desc {
            font-size: 12px;
            white-space: initial;
        }
    }
}

